# ctd-cast-processor

./: .gitignore  CONTRIBUTORS.md  Makefile  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
ctd_processor/: __init__.py  cli.py  compliance.py  core.py  qc.py  utils.py  visualization.py
docs/: METHODS.md
sample_data/: generate_sample_cnv.py
sample_data/raw/: cast_001.cnv  cast_002.cnv  cast_003.cnv  cast_004.cnv
tests/: __init__.py  test_core.py  test_qc.py  test_utils.py
